--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "nodejs-microsoft-graph-connect",
   "version": "2.0.0",
-  "description": "Connecting to Microsoft Graph is the first step every Node.js app must take to start working with the Microsoft Graph API. This sample shows how to connect and call Microsoft Graph",
-  "private": true,
+  "description": "Connecting to Microsoft Graph is the first step every Node.js app must take to start working with the Microsoft Graph API. This sample shows how to connect and call Microsoft Graph"
   "scripts": {
     "start": "mocha ./tests/confTest.js && nodemon ./bin/www",
     "lint": "eslint .",
@@ -15,8 +14,6 @@
     "nodejs",
     "unified"
   ],
-  "author": "DevEd",
-  "license": "MIT",
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
